Use padding instead to prevent bins' shadow clipping

--- a/test/css/theme-default.css
+++ b/test/css/theme-default.css
@@ -37,7 +37,7 @@ BODY {
 }
 
 #items, #bins {
-  margin: 10px;
+  padding: 10px;
   height: 600px;
   overflow: auto;
   position: relative;
